fixed spacing

--- a/react-app/src/components/MediaCard/MediaCard.css
+++ b/react-app/src/components/MediaCard/MediaCard.css
@@ -104,7 +104,7 @@ iframe {
 .content {
   font-weight: 300;
   font-size: 14px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   line-height: 1.5;
 }
 
